First backend autocommit